src/test/ui/const-generics/const-param-before-other-params.min.stderr
error: lifetime parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:5:21
   |
LL | fn bar<const X: (), 'a>(_: &'a ()) {
   |       --------------^^- help: reorder the parameters: `<'a, const X: ()>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: type parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:10:21
   |
LL | fn foo<const X: (), T>(_: &T) {}
   |       --------------^- help: reorder the parameters: `<T, const X: ()>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: `()` is forbidden as the type of a const generic parameter
  --> $DIR/const-param-before-other-params.rs:5:17
   |
LL | fn bar<const X: (), 'a>(_: &'a ()) {
   |                 ^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: `()` is forbidden as the type of a const generic parameter
  --> $DIR/const-param-before-other-params.rs:10:17
   |
LL | fn foo<const X: (), T>(_: &T) {}
   |                 ^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 4 previous errors

